chore:  更新settings.json

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,6 @@
 {
   "pasteImage.path": "${projectRoot}/images/${currentFileNameWithoutExt}",
-  "pasteImage.basePath": "${projectRoot}/images",
+  "pasteImage.basePath": "${projectRoot}",
   "pasteImage.forceUnixStyleSeparator": true,
   "pasteImage.prefix": "/"
 }
